// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FileCard Component FileCard component work 1`] = `
<div
  class="ant-file-card css-var-root"
>
  <div
    class="ant-file-card-file"
  >
    <div
      class="ant-file-card-file-icon"
      style="color: #8c8c8c;"
    >
      <span
        aria-label="file-text"
        class="anticon anticon-file-text"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="file-text"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M854.6 288.7c6 6 9.4 14.1 9.4 22.6V928c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V96c0-17.7 14.3-32 32-32h424.7c8.5 0 16.7 3.4 22.7 9.4l215.2 215.3zM790.2 326L602 137.8V326h188.2zM320 482a8 8 0 00-8 8v48a8 8 0 008 8h384a8 8 0 008-8v-48a8 8 0 00-8-8H320zm0 136a8 8 0 00-8 8v48a8 8 0 008 8h184a8 8 0 008-8v-48a8 8 0 00-8-8H320z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-file-card-file-content"
    >
      <div
        class="ant-file-card-file-name"
      >
        <span
          class="ant-file-card-file-name-prefix"
        >
          test-file
        </span>
        <span
          class="ant-file-card-file-name-suffix"
        >
          .txt
        </span>
      </div>
      <div
        class="ant-file-card-file-description"
      >
        1 KB
      </div>
    </div>
  </div>
</div>
`;

exports[`FileCard Component rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-file-card css-var-root ant-file-card-rtl"
>
  <div
    class="ant-file-card-file"
  >
    <div
      class="ant-file-card-file-icon"
      style="color: #8c8c8c;"
    >
      <span
        aria-label="file-text"
        class="anticon anticon-file-text"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="file-text"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M854.6 288.7c6 6 9.4 14.1 9.4 22.6V928c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32V96c0-17.7 14.3-32 32-32h424.7c8.5 0 16.7 3.4 22.7 9.4l215.2 215.3zM790.2 326L602 137.8V326h188.2zM320 482a8 8 0 00-8 8v48a8 8 0 008 8h384a8 8 0 008-8v-48a8 8 0 00-8-8H320zm0 136a8 8 0 00-8 8v48a8 8 0 008 8h184a8 8 0 008-8v-48a8 8 0 00-8-8H320z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-file-card-file-content"
    >
      <div
        class="ant-file-card-file-name"
      >
        <span
          class="ant-file-card-file-name-prefix"
        >
          test-file
        </span>
        <span
          class="ant-file-card-file-name-suffix"
        >
          .txt
        </span>
      </div>
    </div>
  </div>
</div>
`;
